<package format="2">
    <name>camera_node</name>
    <version>0.0.0</version>
    <description>camera_node</description>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <author>Brian MacAllister</author>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
  
    <depend>geometry_msgs</depend>
    <depend>pcl_ros</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>sensor_msgs</depend>
    <depend>sensor_update</depend>
    <depend>std_msgs</depend>
    <depend>tf</depend>

    <build_depend>message_generation</build_depend>

    <exec_depend>message_runtime</exec_depend>
</package>
