<package format="2">
    <name>exploration_launch</name>
    <version>0.0.0</version>
    <description>exploration_launch</description>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <author>Brian MacAllister</author>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>image_transport</exec_depend>
    <exec_depend>utacc_multimaster</exec_depend>
    <exec_depend>utacc_exploration</exec_depend>
    <exec_depend>topic_tools</exec_depend>
    <exec_depend>uav_launch</exec_depend>
    <exec_depend>exploration_map_node</exec_depend>
    <exec_depend>ooi_detection</exec_depend>
    <exec_depend>move_base_3D</exec_depend>
    <exec_depend>map_merger_node</exec_depend>
    <exec_depend>rosbag</exec_depend>
    <exec_depend>rosbridge_server</exec_depend>
    <exec_depend>voltage_monitor</exec_depend>
</package>
