<package format="2">
    <name>exploration_map</name>
    <version>0.0.0</version>
    <description>exploration_map</description>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <author>Brian MacAllister</author>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>generic_transform</depend>
    <depend>sensor_update</depend>
    <depend>pcl_conversions</depend>
</package>
