<package format="2">
    <name>map_merger</name>
    <version>0.0.0</version>
    <description>map_merger</description>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <author>Brian MacAllister</author>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
  
    <depend>exploration_map</depend>
    <depend>generic_transform</depend>
    <depend>geometry_msgs</depend>
    <depend>pcl_ros</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf</depend>
</package>
