<package format="2">
    <name>map_merger_node</name>
    <version>0.0.0</version>
    <description>map_merger_node</description>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <author>Brian MacAllister</author>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
  
    <depend>exploration_map</depend>
    <depend>geometry_msgs</depend>
    <depend>map_merger</depend>
    <depend>pcl_conversions</depend>
    <depend>pcl_ros</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf</depend>
</package>
