<package format="2">
    <name>sensor_update</name>
    <version>0.0.0</version>
    <description>sensor_update</description>
    <maintainer email="andrew.dornbush@gmail.com">Andrew Dornbush</maintainer>
    <author>Brian MacAllister</author>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
  
    <depend>generic_transform</depend>
</package>
